--- a/index.html
+++ b/index.html
@@ -23,39 +23,35 @@
 
   <body>
 
-    <nav class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#">Project name</a>
-        </div>
+    <nav class="navbar navbar-top">
+      <div class="container">       
         <div id="navbar" class="navbar-collapse collapse">
-          <form class="navbar-form navbar-right">
-            <div class="form-group">
-              <input type="text" placeholder="Email" class="form-control">
+            <div class="navbar-header">
+                <a class="navbar-brand" href="#"><img alt="facebookIQ"src="images/fbiq-logo.png"/></a>
             </div>
-            <div class="form-group">
-              <input type="password" placeholder="Password" class="form-control">
-            </div>
-            <button type="submit" class="btn btn-success">Sign in</button>
-          </form>
+           <ul class="nav navbar-nav navbar-right">
+              <li class="active"><a href="#">Brand Positioning</a></li>
+              <li><a href="#">Identity Essentials</a></li>
+              <li><a href="#">Imagery</a></li>
+              <li><a href="#">Graphic Elements</a></li>
+              <li><a href="#">Applications</a></li>
+            </ul>
         </div><!--/.navbar-collapse -->
       </div>
     </nav>
 
-    <!-- Main jumbotron for a primary marketing message or call to action -->
-    <div class="jumbotron">
-      <div class="container">
-        <h1>Hello, world!</h1>
-        <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
-        <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p>
-      </div>
+    <!-- Main section for a primary marketing message or call to action -->
+    <div class="rotator">
+        <div class="section">
+          <div class="container">
+            <h1>Brand<br/>Guidelines</h1>
+            <p>January 2017</p>
+            <!--p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p-->
+          </div>
+        </div>
     </div>
+
+    
 
     <div class="container">
       <!-- Example row of columns -->
@@ -78,11 +74,53 @@
       </div>
 
       <hr>
-
-      <footer>
-        <p>&copy; 2016 Company, Inc.</p>
-      </footer>
     </div> <!-- /container -->
+
+    <div class="section positioning">
+      <div class="container">
+        <h2>Brand<br/>Positioning</h2>
+        <p>Mission Statement   Strategy   Voice + Tone</p>
+        <!--p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p-->
+      </div>
+    </div>
+
+    <div class="section essentials">
+      <div class="container">
+        <h2>Identity<br/>Essentials</h2>
+        <p>Logo   Color   Typography </p>
+        <!--p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p-->
+      </div>
+    </div>
+
+     <div class="section imagery">
+      <div class="container">
+        <h2>Imagery</h2>
+        <p>People   Places    Moments   Video</p>
+        <!--p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p-->
+      </div>
+    </div>
+
+    <div class="section elements">
+      <div class="container">
+        <h2>Graphic<br/>Elements</h2>
+        <p>Infographics   Dot Grid   Illustration   Shapes   Iconography   Layering</p>
+        <!--p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p-->
+      </div>
+    </div>
+
+    <div class="section applications">
+      <div class="container">
+        <h2>Applications</h2>
+        <p>Digital   Print   Signage &amp; Swag   </p>
+        <!--p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p-->
+      </div>
+    </div>
+
+    <div class="container">
+        <footer>
+            <p>&copy; 2016 Company, Inc.</p>
+        </footer>
+    </div>
 
 
     <!-- Bootstrap core JavaScript
