fb iq mobile responsive begun

--- a/index.html
+++ b/index.html
@@ -68,14 +68,17 @@
     </div> <!-- /container -->
 
     <div class="section positioning">
+        <div class="col-md-3 dot-bg-ctnr"></div>
       <div class="container">
         <h2>Brand<br/>Positioning</h2>
         <p>Mission Statement   Strategy   Voice + Tone</p>
         <!--p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p-->
-      </div>
+      </div>     
     </div>
 
+
     <div class="section essentials">
+      <div class="col-md-3 dot-bg-ctnr"></div>
       <div class="container">
         <h2>Identity<br/>Essentials</h2>
         <p>Logo   Color   Typography </p>
@@ -84,6 +87,7 @@
     </div>
 
      <div class="section imagery">
+      <div class="col-md-3 dot-bg-ctnr"></div>
       <div class="container">
         <h2>Imagery</h2>
         <p>People   Places    Moments   Video</p>
@@ -92,6 +96,7 @@
     </div>
 
     <div class="section elements">
+      <div class="col-md-3 dot-bg-ctnr"></div>
       <div class="container">
         <h2>Graphic<br/>Elements</h2>
         <p>Infographics   Dot Grid   Illustration   Shapes   Iconography   Layering</p>
@@ -100,6 +105,7 @@
     </div>
 
     <div class="section applications">
+      <div class="col-md-3 dot-bg-ctnr"></div>
       <div class="container">
         <h2>Applications</h2>
         <p>Digital   Print   Signage &amp; Swag   </p>
