--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
   </head>
   <body>
 
-    <nav class="navbar navbar-top">
-      <div class="container">       
+    <nav role="navigation" class="navbar navbar-top">
+      <div class="container desktop-nav">       
         <div id="navbar" class="navbar-collapse collapse">
             <div class="navbar-header">
                 <a class="navbar-brand" href="#"><img alt="facebookIQ"src="images/fbiq-logo.png"/></a>
@@ -37,6 +37,35 @@
             </ul>
         </div><!--/.navbar-collapse -->
       </div>
+
+      <div class="mobile-nav">
+        <div id="menuToggle">
+          <!--
+          A fake / hidden checkbox is used as click reciever,
+          so you can use the :checked selector on it.
+          -->
+          <input type="checkbox" />
+          
+          <!--
+         Spans to act as a hamburger.        
+          -->
+          <span></span>
+          <span></span>
+          <span></span>        
+          <!--
+          Too bad the menu has to be inside of the button
+          but hey, it's pure CSS magic.
+          -->
+          <ul id="menu">
+            <a href="#"><li>Brand Positioning</li></a>
+            <a href="#"><li>Identity Essentials</li></a>
+            <a href="#"><li>Imagery</li></a>
+            <a href="#"><li>Graphic Elements</li></a>
+            <a href="#"><li>Applications</li></a>
+          </ul>
+        </div>
+      </div>
+
     </nav>
 
     <!-- Main section for a primary marketing message or call to action -->
