--- a/index.html
+++ b/index.html
@@ -37,36 +37,29 @@
             </ul>
         </div><!--/.navbar-collapse -->
       </div>
-
-      <div class="mobile-nav">
-        <div id="menuToggle">
-          <!--
-          A fake / hidden checkbox is used as click reciever,
-          so you can use the :checked selector on it.
-          -->
-          <input type="checkbox" />
-          
-          <!--
-         Spans to act as a hamburger.        
-          -->
-          <span></span>
-          <span></span>
-          <span></span>        
-          <!--
-          Too bad the menu has to be inside of the button
-          but hey, it's pure CSS magic.
-          -->
-          <ul id="menu">
-            <a href="#"><li>Brand Positioning</li></a>
-            <a href="#"><li>Identity Essentials</li></a>
-            <a href="#"><li>Imagery</li></a>
-            <a href="#"><li>Graphic Elements</li></a>
-            <a href="#"><li>Applications</li></a>
-          </ul>
-        </div>
-      </div>
-
     </nav>
+
+    <div class="mobile-nav">
+      <div class="mobile-logo">
+          <a href="#"><img alt="facebookIQ"src="images/fbiq-logo.png"/></a>
+      </div>
+      <input id="burger" type="checkbox" />
+      <label for="burger">
+          <span></span>
+          <span></span>
+          <span></span>
+      </label>
+      <nav>    
+        <ul>
+          <li><a href="#">Brand Positioning</a></li>
+          <li><a href="#">Identity Essentials</a></li>
+          <li><a href="#">Imagery</a></li>
+          <li><a href="#">Graphic Elements</a></li>
+          <li><a href="#">Applications</a></li>
+        </ul>  
+      </nav>
+    </div>
+   
 
     <!-- Main section for a primary marketing message or call to action -->
     <div class="rotator">
